[project]
name = "thegymgroup-python"
version = "0.1.1"
description = "An Unofficial Python wrapper for The Gym Group's API."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.5",
]
authors = [
    {name="Rifat Rahman"}
]


[tool.basedpyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"

include = [ "." ]
exclude = [
  ".venv/",
  ".git/",
  "**/__pycache__",
]

reportMissingImports = true
reportMissingTypeStubs = false
typeCheckingMode = "basic"

reportOptionalMemberAccess = "warning"
reportOptionalSubscript = "warning"
reportOptionalCall = "warning"
reportOptionalIterable = "warning"

reportGeneralTypeIssues = "warning"
reportUntypedFunctionDecorator = "none"
reportUnnecessaryTypeIgnoreComment = "warning"
reportUnboundVariable = "error"
reportUnusedImport = "warning"
